2009-10-18  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.h, ax25.c, interface.c, digipeater.c, aprx.conf.in,
	  aprx-complex.conf.in:
	    - Prefill AX.25 address field formatted ax25callsign
	      field on all <interface> datastructures.  That comes
	      handy when doing TRACE processing.
	    - Put exact "callsigns" of "WIDE", "TRACE", and "RELAY"
	      into system as interface callsign aliases. When they
	      are present in the request path, substitute interface
	      callsign there with H-bit set.
	    - Update aprx.conf samples to how the system can be
	      configured.

2009-10-17  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.h, digipeater.c, interface.c, pbuf.h, parse_aprs.c:
	    Digipeater preparation, system counts done and requested
	    distribution operations with source specific as well as
	    transmitter specific keywords.

	* aprx.h, ax25.c, interface.c, aprsis.c, pbuf.c, parse_aprs.c:
	    Changed a few "parse failed" returns to "parse OK".
	    Systematic feed of datapacket "with TNC2 line end CRLF pair".

2009-10-16  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* erlang.c, aprx.h, ttyreader.c, netax25.c, igate.c:
	    Clean Erlang accountig API.  Removed unused parameters.

	* interface.c, aprsis.c, igate.c, aprx.h, aprx.c, digipeater.c:
	    Minimal <digipeater> <source> definition parsers.
	    Additionally internal "APRSIS" pseudo-interface.

2009-10-15  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.h, aprx.c, rfbeacon.c:
	    Add internal "tocall" constant with value "APRX19".
	    That one will track software versions.
	    The 'for' keyword on beacons defaults to $mycall.

	* aprx.h, aprx.c, interface.c, config.c, rfbeacon.c, aprsis.c,
	  ttyreader.c, netbeacon.c:
	    Config machinery redone towards new style.  Rx-IGate
	    works again.  (Old config should work too.)

	* aprx.h, pbuf.c, pbuf.h, interface.c, digipeater.c, aprx.c:
	    Skeletons for pbufs, digipeaters, and their uses in